# template-django-postgres-nginx

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
nginx/: nginx.conf
project/: settings.py
web/: pyproject.toml
web/project/: settings.py
